<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="horizontal"
    tools:context="com.example.pong.ui.MainMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startGameButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:text="@string/startGame"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontSizeButtons"
            app:layout_constraintBottom_toTopOf="@+id/settingsButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/settingsButton"
            app:layout_constraintRight_toRightOf="@+id/settingsButton" />

        <Button
            android:id="@+id/settingsButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            tools:style="@android:style/Widget.Material.Button" />

        <Button
            android:id="@+id/helpButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/help"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@+id/settingsButton"
            app:layout_constraintRight_toRightOf="@+id/settingsButton"
            app:layout_constraintTop_toBottomOf="@+id/settingsButton"
            tools:style="@android:style/Widget.Material.Button" />

        <Button
            android:id="@+id/aboutButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/about"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@+id/settingsButton"
            app:layout_constraintRight_toRightOf="@+id/settingsButton"
            app:layout_constraintTop_toBottomOf="@+id/helpButton"
            tools:style="@android:style/Widget.Material.Button" />

    </LinearLayout>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/marginAll"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="75sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>