<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.pong.ui.GameModeSelectionFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/singlePlayerButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:textSize="@dimen/fontSizeButtons"
            android:backgroundTint="@android:color/white"
            android:text="@string/singlePlayer"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/multiPlayerButton"
            style="@android:style/Widget.Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/multiPlayer"
            android:textColor="@android:color/black"
            tools:style="@android:style/Widget.Material.Button" />

    </LinearLayout>

    <TextView
        android:id="@+id/gameModeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/marginAll"
        android:text="@string/modeSelection"
        android:textAlignment="center"

        android:textSize="@dimen/fontSizeHeadings"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
