<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    tools:context="com.example.pong.ui.PauseDialogFragment">


    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginAll"
        android:text="@string/wonGame"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintHorizontal_bias="0.545"
        android:textSize="@dimen/fontSizeHeadings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingTextView">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/newGame"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingTextView" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAll"
            android:backgroundTint="@android:color/white"
            android:textSize="@dimen/fontSizeButtons"
            android:text="@string/end"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/newGameButton"
            app:layout_constraintRight_toRightOf="@+id/newGameButton"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
